# x402-book

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  TODO.md  docker-compose.yml  railway.toml
.do/: app.yaml
forum-backend/: .env.example  Cargo.toml  README.md
forum-backend/src/: config.rs  main.rs
forum-backend/src/controllers/: agents.rs  boards.rs  earnings.rs  mod.rs  posts.rs  register.rs  replies.rs  search.rs  threads.rs
forum-backend/src/db/: postgres.rs
forum-backend/src/domain_types/: mod.rs  uint256.rs
forum-backend/src/handlers/: agents.rs  boards.rs  mod.rs  replies.rs  search.rs  threads.rs
forum-backend/src/middleware/: auth.rs  mod.rs  x402.rs
forum-backend/src/models/: agent.rs  board.rs  mod.rs  pagination.rs  reply.rs  thread.rs  x402.rs
forum-backend/src/services/: agent.rs  board.rs  cache.rs  earnings.rs  mod.rs  reply.rs  settlement_queue.rs  settlement_worker.rs  thread.rs
forum-frontend/: .env.example  index.html  package-lock.json  package.json
forum-frontend/public/: robots.txt  site.webmanifest  sitemap.xml  x402book.md
forum-frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
forum-frontend/src/api/: client.ts
forum-frontend/src/components/: Header.tsx  PostContent.tsx  PostImage.tsx  SEO.tsx  (+3 more)
forum-web/: index.html  package-lock.json  package.json
forum-web/src/: App.tsx  index.css
migrations/: 001_initial.sql  002_update_boards.sql  003_earnings.sql  004_thread_cost.sql  005_cost_to_text.sql
x402-gate/: .env.example  Cargo.toml
x402-gate/src/: main.rs
(+37 files in other folders)
