[package]
name = "forum-backend"
version = "0.1.0"
edition = "2021"
default-run = "forum-backend"

[[bin]]
name = "forum-backend"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "rollback"
path = "src/bin/rollback.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
primitive-types = "0.13"
